# JIBUC

./: CMakeLists.txt  README.md
documentation/: PROJECT_SPECIFICATION.md
example-programs/: sample-invalid-program.jibuc  sample-valid-program.jibuc  test-file.jibuc
src/: JIBUC.cpp  JIBUC.l  Token.h  main.cpp
